Fix z-index issue with videos that are not in the center of the project stack

--- a/assets/css/units/projects.css
+++ b/assets/css/units/projects.css
@@ -342,7 +342,7 @@
 	position: fixed;
     top: 0;
     left: 0;
-	z-index: 101;
+	z-index: 1001;
     width: 100%;
 
 	iframe {
@@ -351,6 +351,7 @@
 	    left: 0;
 	    width: 100%;
 	    height: 100%;
+        background: #000;
 	}
 
 	&::before {
